Set EJS as the view engine and update Vercel configuration for public assets

--- a/vercel.json
+++ b/vercel.json
@@ -5,16 +5,18 @@
         "src": "index.js",
         "use": "@vercel/node",
         "config": {
-          "includeFiles": ["views/**/*"]
+          "includeFiles": ["views/**", "public/**"]
         }
       }
     ],
     "routes": [
       {
+        "src": "/styles/(.*)",
+        "dest": "/public/styles/$1"
+      },
+      {
         "src": "/(.*)",
-        "dest": "index.js"
+        "dest": "/index.js"
       }
     ]
   }
-  
-  
