Refactor robot data handling and update static file routes; enhance Vercel configuration for logo image

--- a/vercel.json
+++ b/vercel.json
@@ -11,12 +11,12 @@
     ],
     "routes": [
       {
-        "src": "/logo.png",
-        "dest": "/index.js"
-      },
-      {
         "src": "/styles/(.*)",
         "dest": "/public/styles/$1"
+      },
+      {
+        "src": "/logo.png",
+        "dest": "/public/logo.png"
       },
       {
         "src": "/(.*)",
