Refactor robot data handling and static file serving; update Vercel routes for logo and styles

--- a/vercel.json
+++ b/vercel.json
@@ -11,12 +11,12 @@
     ],
     "routes": [
       {
-        "src": "/styles/(.*)",
-        "dest": "/public/styles/$1"
+        "src": "/logo.png",
+        "dest": "/index.js"
       },
       {
-        "src": "/logo.png",
-        "dest": "/public/logo.png"
+        "src": "/styles/(.*)",
+        "dest": "/public/styles/$1"
       },
       {
         "src": "/(.*)",
